# ahlein

./: .env.example  .gitignore  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  main.py  orchestrator.py
app/admin/: api.py  auth.py  schemas.py  service.py  ui.py
app/booking/: adapter.py  calcom.py  mock.py  registry.py
app/conversation/: session.py  window.py
app/db/: crypto.py  models.py  session.py
app/knowledge/: rag.py  service_menu.py
app/llm/: loop.py  prompts.py  provider.py  tools.py  types.py
app/llm/providers/: claude.py  gemini.py
app/messaging/: sender.py
app/safety/: handoff.py
app/templates/: base.html  login.html  tenant_detail.html  tenants.html
app/tenancy/: context.py  resolver.py
app/webhook/: parser.py  router.py
evals/: cases.yaml  run_evals.py
scripts/: init_db.py  simulate_message.py  smoke_llm.py
seeds/: seed_tenant.py
tests/: test_mock_adapter.py  test_parser.py  test_safety.py
