[project]
name = "clinic-whatsapp-bot"
version = "0.1.0"
description = "Multi-tenant WhatsApp appointment-booking bot for clinics"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30",
    "redis>=5.1",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "httpx>=0.27",
    "cryptography>=43",
    "pgvector>=0.3",          # Phase 3 (extension enabled now; table added later)
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
